sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:13: error: Boolean does not take parameters
			echange(i,i+1)
                               ^